--- a/new-site/package.json
+++ b/new-site/package.json
@@ -18,7 +18,9 @@
     "@angular/forms": "~7.1.0",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
+    "@angular/pwa": "^0.11.3",
     "@angular/router": "~7.1.0",
+    "@angular/service-worker": "~7.1.0",
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.9",
     "@fortawesome/free-brands-svg-icons": "^5.6.0",
