--- a/new-site/package.json
+++ b/new-site/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.9",
     "@fortawesome/free-brands-svg-icons": "^5.6.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
